--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && prisma migrate deploy && next build",
-    "lint": "next lint",
-    "seed": "tsx prisma/seed.ts",
-    "start:db": "docker-compose up -d",
-    "stop:db": "docker-compose down",
-    "start:app": "npm run start:db && npm run build && npm run start",
-    "start": "next start",
-    "postinstall": "prisma generate"
+  "build": "prisma generate && prisma migrate deploy && next build",
+  "start": "next start",
+  "lint": "next lint",
+  "seed": "node prisma/seed.js",
+  "start:db": "docker-compose up -d",
+  "stop:db": "docker-compose down",
+  "start:app": "npm run start:db && npm run build && npm run start",
+  "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.16.1",
@@ -38,6 +38,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.2"
   }
 }
