--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
 "scripts": {
   "dev": "next dev --turbopack",
-  "build": "prisma generate && prisma migrate deploy && next build",
+  "build": "prisma generate && next build",
+  "migrate": "DATABASE_URL=$DIRECT_URL prisma migrate deploy",
   "start": "next start",
   "lint": "next lint",
   "seed": "node prisma/seed.js",
